# AgentFoundry

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
docs/: code-governance.md  context-selection-module-deepening-plan.md  harness-requirements.md  real-agent-technical-plan.md  task-policy.md  tui-experience-audit.md  tui-first-version-design.md  tui-technical-design.md  unresolved-risks-and-roadmap.md
examples/evals/: session_working_state.json
examples/tasks/: hello.yaml  openai_chat_edit_smoke.yaml  openai_tool_call_smoke.yaml
src/agentfoundry/: __init__.py  cli.py
src/haagent/: __init__.py  cli.py  cli_commands.py  (+5 more)
tests/: __init__.py  conftest.py  test_assistant_service.py  test_cli.py  test_cli_chat.py  test_cli_check.py  test_cli_export_eval.py  test_cli_inspect.py  test_cli_personal_assistant.py  test_cli_run.py  test_cli_smoke.py  test_command.py  test_context_builder.py  test_context_compaction.py  test_context_find.py  test_context_source_catalog.py  test_credentials.py  test_dogfood.py  test_episode_validator.py  test_episode_writer.py  test_eval_export.py  test_execution_boundary.py  test_failure_taxonomy.py  test_full_compact.py  test_full_compact_contract.py  test_loop_guidance.py  test_mcp_runtime.py  test_mcp_settings.py  test_memory_candidates.py  test_memory_commit.py  test_memory_extraction.py  test_memory_governance.py  test_memory_retrieval.py  test_model_catalog.py  test_model_gateway.py  test_observation_compaction.py  test_orchestrator.py  test_orchestrator_refactor.py  test_path_policy.py  test_policy.py  (+10 more)
(+135 files in other folders)
