[project]
name = "haagent"
version = "0.1.0"
description = "Harness-first agent runtime MVP."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.scripts]
haagent = "haagent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haagent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
